<resources>
    <string name="app_name">DSBDirectMGW</string>
    <string name="app_name_offline">DSBDirectMGW Time Travel</string>
    <string name="title_activity_settings">Settings</string>
    <string name="credentials_invalid">Credentials invalid</string>
    <string name="credentials_correct">Credentials confirmed</string>
    <string name="credentials_popup_title">Authentication failure</string>
    <string name="credentials_popup_open_preferences">Open preferences</string>
    <string name="timetable_uri_acquired">Loading timetable</string>
    <string name="timetable_last_changed">Last updated %s</string>
    <string name="timetable_published">Published %s</string>
    <string name="timetable_updated_now">Just now</string>
    <string name="network_generic_error">Network error</string>
    <string name="network_invalid_response">Invalid response</string>
    <string name="error_parsing">Could not parse data to table</string>
    <string name="error_parsing_partial">Some data could not be parsed</string>
    <string name="network_authenticating">Authenticating</string>
    <string name="uri_news" translatable="false">https://notabug.org/fynngodau/DSBDirect/raw/master/news</string>
    <string name="uri_repository" translatable="false">https://notabug.org/fynngodau/DSBDirect</string>
    <string name="uri_mgw_repository" translatable="false">https://github.com/A-Dur/DSBDirectMGW</string>
    <string name="uri_issue_tracker" translatable="false">https://notabug.org/fynngodau/DSBDirect/issues</string>
    <string name="uri_requestparser" translatable="false">https://dsb.bixilon.de/api/requestParse.php</string>
    <string name="query_body_base_json" translatable="false">{\"AppVersion\":\"2.5.9\",\"BundleId\":\"de.heinekingmedia.dsbmobile\"}</string>
    <string name="query_body_outer_json" translatable="false">{\"req\":{\"Data\":\"%s\",\"DataType\":1}}</string>
    <string name="email_uri" translatable="false">mailto:fynngodau@mailbox.org?subject=ESBDirect&amp;body=%s</string>
    <string name="email_body">(Be kind!)</string>
    <string name="input_hint_pass">Pass</string>
    <string name="input_hint_id">ID</string>
    <string name="button_submit">Submit</string>
    <string name="action_reload">Reload</string>
    <string name="action_temp_filters_enable">Enable Filters</string>
    <string name="action_temp_filters_disable">Disable Filters</string>
    <string name="action_reauth">Reauthenticate</string>
    <string name="action_filter">Filter</string>
    <string name="action_choose_parser">Select parser</string>
    <string name="action_view_history">View history</string>
    <string name="confirm">Confirm</string>
    <string name="added">added</string>
    <string name="already_added">already added</string>
    <string name="removed">removed</string>
    <string name="cancel">Cancel</string>
    <string name="import_">Import</string>
    <string name="dismiss">Dismiss</string>
    <string name="download">Download</string>
    <string name="action_filter_popup_title">Filter</string>
    <string name="number">Number</string>
    <string name="letter">Letter</string>
    <string name="name">Name</string>
    <string name="filter_by_class">Filter by class</string>
    <string name="filter_by_teacher">Filter by teacher</string>
    <string name="settings_view_filter_exclude_general">Always display general announcements (recommended)</string>
    <string name="action_filter_popup_message">Please input what class or course or teacher to filter for. Entries that match multiple categories will be <b>highlighted</b>. Case-sensitive.</string>
    <string name="action_parse">Parse to table</string>
    <string name="initializing">Initializing</string>
    <string name="parser_automatic">Automatic</string>
    <string name="ok">OK</string>
    <string name="empty">Nothing to display</string>
    <string name="you_are_offline">You are offline</string>
    <string name="empty_string">""</string>
    <string name="one_file">one file</string>
    <string name="files">files</string>
    <string name="transfer_now">Transfer now</string>
    <string name="dont_request">Don\'t request</string>
    <string name="open">Open</string>
    <string name="action_settings">Preferences</string>
    <string name="settings_view">View</string>
    <string name="settings_view_parse">Parse</string>
    <string name="settings_view_parse_not_html">Image tables can\'t be parsed</string>
    <string name="settings_view_parser">Parser</string>
    <string name="settings_view_filter">Enable filters</string>
    <string name="settings_view_useless">Hide Useless Entries</string>
    <string name="settings_view_useless_summary">Does not show unimportant entries like \"Abwesende Klassen\"</string>
    <string name="settings_view_set_filter">Set filters</string>
    <string name="settings_view_parse_summary">Read out plans into a processable table using a parser</string>
    <string name="settings_view_filter_summary">Only display relevant entries</string>
    <string name="connect_webuntis_preference">Connect to WebUntis</string>
    <string name="connect_webuntis_preference_summary">Connect another substitution plan (e.g. from LAU, which uses WebUntis) so that you can also integrate it here (in development)</string>
    <string name="settings_login">Login</string>
    <string name="settings_login_id">ID</string>
    <string name="settings_login_pass">Pass</string>
    <string name="settings_time_travel">Time travel</string>
    <string name="settings_time_travel_caching">Store duration</string>
    <string name="settings_time_travel_caching_summary">Keep files for %s</string>
    <string name="settings_time_travel_clear_cache">Delete all files now</string>
    <string name="settings_time_travel_description">Time travel allows you to view past plan versions stored on your device.</string>
    <string name="clear_cache_popup_title">Delete files</string>
    <string name="clear_cache_popup_message">Would you like to delete %1$s, occupying %2$s?</string>
    <string name="settings_about">About</string>
    <string name="settings_about_description">Developed by Fynn Godau</string>
    <string name="settings_about_description_summary">You are on version %s</string>
    <string name="settings_about_email">Write the developer an email message</string>
    <string name="settings_about_email_summary">He appreciates thank-you messages because they let him know someone uses the software he developed</string>
    <string name="settings_about_request_parser">Request a parser to be developed</string>
    <string name="settings_about_issues">File an issue</string>
    <string name="settings_about_repository">Check out the original DSBDirect repository</string>
    <string name="settings_about_repository_summary">This software is licensed under GNU GPL v3, meaning that you got additional freedoms</string>
    <string name="settings_about_mgw_repository">DSBDirectMGW Repository</string>
    <string name="settings_about_mgw_repository_summary">The repository for this release</string>
    <string name="settings_about_issues_summary">Utilise the issue tracker to request features and report bugs</string>
    <string name="request_parser_popup_title">Request parser</string>
    <string name="settings_polling">Notifications</string>
    <string name="settings_polling_enabled">Enable notifications</string>
    <string name="settings_polling_interval">Check interval</string>
    <string name="settings_polling_interval_summary">Check for new plan notifications every %s</string>
    <string name="settings_polling_description">Receive today\'s entries in a notification as soon as they become available. This feature may cause battery drain. No checks are performed during weekends and during night-time to conserve energy.</string>
    <string name="settings_view_filter_hide_past">Hide past entries</string>
    <string name="settings_polling_display_empty">Display empty notifications</string>
    <string name="settings_polling_display_empty_summary">Also notify if no entries match filters</string>
    <string name="settings_polling_download">Download new tables automatically</string>
    <string name="settings_polling_download_summary">Download new content as soon as it is found</string>
    <string name="settings_polling_save_data">Do not check after 4 pm (Beta)</string>
    <string name="settings_polling_save_data_summary">After 4 pm the app stops looking for new entries to save network traffic</string>
    <string name="settings_view_layout">Layout</string>
    <string name="settings_view_merge">Merge</string>
    <string name="settings_view_merge_summary">Merge multiple pages into one table</string>
    <string name="long_click_add_course_parser">Hold To Add Course</string>
    <string name="long_click_add_course_parser_summary">If you long-press an entry, you can add the contained course to your filters (Replaces hold to Share)</string>
    <string name="settings_filter">Filter</string>
    <string name="settings_view_style">Background</string>
    <string name="settings_parser">Parser</string>
    <string name="settings_view_invert_images">Invert images</string>
    <string name="settings_view_invert_images_summary">Flip image colors to switch black and white</string>
    <string name="settings_about_libraries">About libraries</string>
    <string name="settings_about_show_changes">All changes of the MGW version</string>
    <string name="settings_about_show_changes_summary">Show changes that the MGW version has compared to the original version</string>
    <string name="settings_view_styling">Style and Colors</string>
    <string name="settings_styling_color_primary">Primary color</string>
    <string name="settings_styling_color_accent">Accent color</string>
    <string name="settings_styling_color_primary_dark">Primary color dark</string>
    <string name="settings_style_description">You may adjust the application\'s colors to your liking. Unfortunately, the default blue and pink will still be visible at some occasions where it is hard or impossible to change them.</string>
    <string name="filter_by_courses">Filter by courses (separate with spaces; courses must appear in the info field)</string>
    <string name="courses">Courses</string>
    <string name="settings_login_manage">Manage credentials</string>
    <string name="settings_shortcodes">Shortcodes</string>
    <string name="settings_shortcodes_enable">Enable shortcodes</string>
    <string name="settings_shortcodes_enable_summary">Replaced shortcodes by the teacher\'s full name</string>
    <string name="settings_shortcodes_elternportal">Import from eltern-portal.org</string>
    <string name="settings_shortcodes_elternportal_summary">If your school uses the "Eltern-Portal" platform, shortcodes can be downloaded from it (Unfortunately, the MGW does not use this platform)</string>
    <string name="settings_shortcodes_elternportal_popup_text_url">Portal URL</string>
    <string name="settings_shortcodes_elternportal_popup_hint_url">URL</string>
    <string name="settings_shortcodes_elternportal_popup_text_email">Email address</string>
    <string name="settings_shortcodes_elternportal_popup_hint_email">Email</string>
    <string name="settings_shortcodes_elternportal_popup_text_password">Password</string>
    <string name="settings_shortcodes_elternportal_popup_hint_password">Pass</string>
    <string name="settings_shortcodes_manage">Manage shortcodes</string>
    <string name="settings_shortcodes_description">Shortcodes are replaced with their corresponding teacher\'s full name.</string>
    <string name="edit">Edit</string>
    <string name="settings_endpoint">Endpoint</string>
    <string name="settings_endpoint_summary">If the app stops working, try editing this setting</string>
</resources>