<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:selectable="false"
        android:persistent="false"
        android:summary="@string/settings_shortcodes_description"
        android:key="settings_shortcodes_description"
        />

    <godau.fynn.dsbdirect.view.PreferenceCategory
        android:title="@string/import_">

        <Preference
            android:title="@string/settings_shortcodes_elternportal"
            android:summary="@string/settings_shortcodes_elternportal_summary"
            android:key="settings_shortcodes_elternportal"
            />

    </godau.fynn.dsbdirect.view.PreferenceCategory>

    <godau.fynn.dsbdirect.view.PreferenceCategory
        android:title="@string/edit"
        android:key="shortcodes"/>

</PreferenceScreen>