<!--
  ~ DSBDirect
  ~ Copyright (C) 2019 Fynn Godau
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  ~
  ~ This software is not affiliated with heinekingmedia GmbH, the
  ~ developer of the DSB platform.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:selectable="false"
        android:persistent="false"
        android:summary="@string/settings_style_description"
        android:key="styling_description"
        />
    <ListPreference
        android:title="@string/settings_view_style"
        android:summary="%s"
        android:entries="@array/settings_view_style_options"
        android:entryValues="@array/settings_view_style_values"
        android:defaultValue="light"
        android:key="style"
        />
    <Preference
        android:title="@string/settings_styling_color_primary"
        android:key="colorPrimary"
        />
    <Preference
        android:title="@string/settings_styling_color_primary_dark"
        android:key="colorPrimaryDark"
        />
    <Preference
        android:title="@string/settings_styling_color_accent"
        android:key="colorAccent"
        />
    <CheckBoxPreference
        android:title="@string/settings_view_invert_images"
        android:summary="@string/settings_view_invert_images_summary"
        android:defaultValue="false"
        android:key="invertImages"
        />

</PreferenceScreen>
